Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86736

QPushButton ignore normalOn/Off icon in fusion

XMLWordPrintable

    • All
    • e9ccdf4d8415717323ea7849ded195343560514a (qt/qtbase/dev)

      Normal On/off property is completely ignored when a push button has these two icon set and using Fusion style.
      It works good with all other styles.
      Attached ui file shows this in fusion style preview.

        1. btn_next.png
          0.7 kB
          Irfan Omair
        2. btn_prev.png
          0.7 kB
          Irfan Omair
        3. just_a_pushbutton (1).ui
          0.9 kB
          Irfan Omair
        4. qtbug_86736.tgz
          2 kB
          Christian Ehrlicher
        5. qtbug86736.zip
          4 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-86736
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes